2009-06-01 14:50 +0200  Rocco Rutte  <pdmef@gmx.net>  (7a277ba306c9)

	* gnupgparse.c: Use mutt_atoi() when parsing GnuPG output. Closes
	#3145

2009-06-01 13:22 +0200  Rocco Rutte  <pdmef@gmx.net>  (82a581c24f1a)

	* hcache.c, mh.c: More atoi() fixes

2009-06-01 11:27 +0200  Rocco Rutte  <pdmef@gmx.net>  (371d7556fec3)

	* ChangeLog, smtp.c: SMTP: Use mutt_atoi() to parse server responses

2009-06-01 11:26 +0200  Rocco Rutte  <pdmef@gmx.net>  (35a444838167)

	* curs_main.c, edit.c, init.c, main.c, menu.c, mh.c, parse.c,
	resize.c, score.c, url.c: Use strtol() wrappers for most atoi()
	calls

2009-06-01 11:24 +0200  Rocco Rutte  <pdmef@gmx.net>  (f1b6eb09f2ad)

	* ChangeLog, lib.c, lib.h: Add mutt_atos(), mutt_atoi() and
	mutt_atol() (strtol() wrappers)

2009-06-01 10:36 +0200  Rocco Rutte  <pdmef@gmx.net>  (36b7e267ce33)

	* send.c: Treat address groups as no recipients

	When sending with Sendmail or SMTP we exclude address groups anyway,
	so treat these addresses as not present when checking for valid
	recipients before sending in the compose menu.

2009-06-01 10:29 +0200  Rocco Rutte  <pdmef@gmx.net>  (64250df0e9a4)

	* ChangeLog, smtp.c: Weed out address groups for SMTP the same way we
	do for sendmail

2009-05-31 19:19 -0700  Brendan Cully  <brendan@kublai.com>  (0024860ab03e)

	* doc/Makefile.am: Allow chunked and unchunked manuals to build in
	parallel.

2009-05-31 19:07 -0700  Brendan Cully  <brendan@kublai.com>  (fd18d0d6f3d0)

	* mutt_ssl_gnutls.c: Remove trailing whitespace

2009-05-31 14:46 +0200  Rocco Rutte  <pdmef@gmx.net>  (8e591e80cd48)

	* ChangeLog, smtp.c: SMTP: Don't send "undisclosed-recipients" in RCPT
	TO

	This happened for Bcc only messages. "undisclosed-recipients" is
	added in To: as guard against MTAs that leak BCCs if no To:/Cc:
	header is given. See Debian #529090.

2009-05-31 13:19 +0200  Rocco Rutte  <pdmef@gmx.net>  (9594f10d2038)

	* init.h: Document that $pager_context affects searching, too
